scribble-test/src/test/resources/good/safety/stuckmsg/threeparty/Test01.scr
module good.safety.stuckmsg.threeparty.Test01;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		1() from A to B;  // Non-det "choice direction message", cf. standard branch/select syntax
		1() from B to C;
	}
	or
	{
		1() from A to B;
		2() from B to C;
	}
}


