scribble-test/src/test/resources/bad/syntax/enabling/Test02.scr
module bad.syntax.enabling.Test01;


global protocol Proto1(role A, role B, role C)
{
	//0() from B to C;
	choice at A
	{
		0() from B to C;
		1() from A to B;
		1() from B to C;
	}
	or
	{
		0() from B to C;
		2() from A to B;
		2() from B to C;
	}
}

